// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`flawTrackers > Correctly renders the component when there are not trackers to display 1`] = `
"<div data-v-89a61d08="">
  <div data-v-89a61d08="" class="affects-trackers">
    <div data-v-89a61d08="" class="bg-dark rounded-top-2 text-info">
      <div data-v-89a61d08="" class="affect-trackers-heading d-flex p-1 pt-2 px-3">
        <h5 data-v-89a61d08="" class="m-0">Trackers</h5>
      </div>
      <!--v-if--><input data-v-89a61d08="" type="text" class="form-control border border-info focus-ring m-2 mb-1 p-1" style="width: 35ch;" placeholder="Filter Modules/Components...">
      <div data-v-89a61d08="" class="trackers-toolbar p-2 pt-1">
        <div data-v-89a61d08="" class="tracker-badges">
          <!--v-if-->
          <!--v-if-->
        </div><button data-v-89a61d08="" type="button" class="btn btn-sm btn-info ms-auto"><i data-v-89a61d08="" class="bi bi-binoculars"></i> Show Trackers Manager </button>
      </div>
    </div>
    <div data-v-89a61d08="" class="osim-tracker-card pb-2 pt-0 pe-2 ps-2 bg-dark">
      <table data-v-89a61d08="" class="trackers-table table table-striped table-info mb-0">
        <thead data-v-89a61d08="">
          <tr data-v-89a61d08="">
            <th data-v-89a61d08="">Bug ID</th>
            <th data-v-89a61d08="">Module</th>
            <th data-v-89a61d08="">Component</th>
            <th data-v-89a61d08="">Product Stream</th>
            <th data-v-89a61d08=""><span data-v-89a61d08="" class="align-bottom me-1">Status</span><button data-v-89a61d08="" id="status-filter" type="button" class="btn btn-sm border-0 p-0" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="false"><i data-v-89a61d08="" class="bi bi-funnel" title=""></i></button>
              <ul data-v-89a61d08="" class="dropdown-menu" aria-labelledby="status-filter"></ul>
            </th>
            <th data-v-89a61d08="">Resolution</th>
            <th data-v-89a61d08=""> Created date <i data-v-89a61d08="" class="bi-caret-up-fill bi"></i></th>
            <th data-v-89a61d08=""> Updated date <i data-v-89a61d08="" class="opacity-0 bi-caret-up-fill bi"></i></th>
          </tr>
        </thead>
        <tbody data-v-89a61d08=""></tbody>
      </table>
      <div data-v-89a61d08=""> No trackers to display </div>
      <!--v-if-->
    </div>
  </div>
</div>"
`;

exports[`flawTrackers > Correctly renders the component when there are trackers to display 1`] = `
"<div data-v-89a61d08="">
  <div data-v-89a61d08="" class="affects-trackers">
    <div data-v-89a61d08="" class="bg-dark rounded-top-2 text-info">
      <div data-v-89a61d08="" class="affect-trackers-heading d-flex p-1 pt-2 px-3">
        <h5 data-v-89a61d08="" class="m-0">Trackers</h5>
      </div>
      <!--v-if--><input data-v-89a61d08="" type="text" class="form-control border border-info focus-ring m-2 mb-1 p-1" style="width: 35ch;" placeholder="Filter Modules/Components...">
      <div data-v-89a61d08="" class="trackers-toolbar p-2 pt-1">
        <div data-v-89a61d08="" class="tracker-badges">
          <div data-v-89a61d08="" class="per-page-btn btn btn-sm badge"><i data-v-89a61d08="" style="pointer-events: auto;" class="bi bi-dash-square fs-6 my-auto" title="Reduce trackers per page"></i><span data-v-89a61d08="" class="mx-2 my-auto">Per page:</span><input data-v-89a61d08="" type="text" class="form-control mx-2" value="10"><i data-v-89a61d08="" style="pointer-events: auto;" class="bi bi-plus-square fs-6 my-auto" title="Increase trackers per page"></i></div>
          <!--v-if-->
        </div><button data-v-89a61d08="" type="button" class="btn btn-sm btn-info ms-auto"><i data-v-89a61d08="" class="bi bi-binoculars"></i> Show Trackers Manager </button>
      </div>
    </div>
    <div data-v-89a61d08="" class="osim-tracker-card pb-2 pt-0 pe-2 ps-2 bg-dark">
      <table data-v-89a61d08="" class="trackers-table table table-striped table-info mb-0">
        <thead data-v-89a61d08="">
          <tr data-v-89a61d08="">
            <th data-v-89a61d08="">Bug ID</th>
            <th data-v-89a61d08="">Module</th>
            <th data-v-89a61d08="">Component</th>
            <th data-v-89a61d08="">Product Stream</th>
            <th data-v-89a61d08=""><span data-v-89a61d08="" class="align-bottom me-1">Status</span><button data-v-89a61d08="" id="status-filter" type="button" class="btn btn-sm border-0 p-0" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="false"><i data-v-89a61d08="" class="bi bi-funnel" title=""></i></button>
              <ul data-v-89a61d08="" class="dropdown-menu" aria-labelledby="status-filter">
                <li data-v-89a61d08=""><a data-v-89a61d08="" href="#" class="btn py-0 dropdown-item"><input data-v-89a61d08="" type="checkbox" class="form-check-input me-2"><span data-v-89a61d08="">NEW</span></a></li>
                <li data-v-89a61d08=""><a data-v-89a61d08="" href="#" class="btn py-0 dropdown-item"><input data-v-89a61d08="" type="checkbox" class="form-check-input me-2"><span data-v-89a61d08="">CLOSED</span></a></li>
              </ul>
            </th>
            <th data-v-89a61d08="">Resolution</th>
            <th data-v-89a61d08=""> Created date <i data-v-89a61d08="" class="bi-caret-up-fill bi"></i></th>
            <th data-v-89a61d08=""> Updated date <i data-v-89a61d08="" class="opacity-0 bi-caret-up-fill bi"></i></th>
          </tr>
        </thead>
        <tbody data-v-89a61d08="">
          <tr data-v-89a61d08="">
            <td data-v-89a61d08=""><a data-v-89a61d08="" href="http://jira-service:8002/browse/XXXX-0006" target="_blank">XXXX-0006 <i data-v-89a61d08="" class="bi-box-arrow-up-right"></i></a></td>
            <td data-v-89a61d08="" colspan="1" title="openshift-5">openshift-5</td>
            <td data-v-89a61d08="" colspan="1"></td>
            <td data-v-89a61d08="" colspan="1" title="xxxx-0-006">xxxx-0-006</td>
            <td data-v-89a61d08="" colspan="1">CLOSED</td>
            <td data-v-89a61d08="" colspan="1"></td>
            <td data-v-89a61d08="" colspan="1">2024-07-01 13:05 UTC</td>
            <td data-v-89a61d08="" colspan="1">2024-07-01 13:06 UTC</td>
          </tr>
          <tr data-v-89a61d08="">
            <td data-v-89a61d08=""><a data-v-89a61d08="" href="http://jira-service:8002/browse/XXXX-0005" target="_blank">XXXX-0005 <i data-v-89a61d08="" class="bi-box-arrow-up-right"></i></a></td>
            <td data-v-89a61d08="" colspan="1" title="openshift-5">openshift-5</td>
            <td data-v-89a61d08="" colspan="1"></td>
            <td data-v-89a61d08="" colspan="1" title="xxxx-0-005">xxxx-0-005</td>
            <td data-v-89a61d08="" colspan="1">NEW</td>
            <td data-v-89a61d08="" colspan="1"></td>
            <td data-v-89a61d08="" colspan="1">2024-08-01 13:05 UTC</td>
            <td data-v-89a61d08="" colspan="1">2024-08-01 13:06 UTC</td>
          </tr>
          <tr data-v-89a61d08="">
            <td data-v-89a61d08=""><a data-v-89a61d08="" href="http://jira-service:8002/browse/XXXX-0004" target="_blank">XXXX-0004 <i data-v-89a61d08="" class="bi-box-arrow-up-right"></i></a></td>
            <td data-v-89a61d08="" colspan="1" title="openshift-1">openshift-1</td>
            <td data-v-89a61d08="" colspan="1"></td>
            <td data-v-89a61d08="" colspan="1" title="xxxx-0-004">xxxx-0-004</td>
            <td data-v-89a61d08="" colspan="1">CLOSED</td>
            <td data-v-89a61d08="" colspan="1"></td>
            <td data-v-89a61d08="" colspan="1">2024-09-01 13:05 UTC</td>
            <td data-v-89a61d08="" colspan="1">2024-09-01 13:06 UTC</td>
          </tr>
          <tr data-v-89a61d08="">
            <td data-v-89a61d08=""><a data-v-89a61d08="" href="http://jira-service:8002/browse/XXXX-0003" target="_blank">XXXX-0003 <i data-v-89a61d08="" class="bi-box-arrow-up-right"></i></a></td>
            <td data-v-89a61d08="" colspan="1" title="openshift-1">openshift-1</td>
            <td data-v-89a61d08="" colspan="1"></td>
            <td data-v-89a61d08="" colspan="1" title="xxxx-0-003">xxxx-0-003</td>
            <td data-v-89a61d08="" colspan="1">NEW</td>
            <td data-v-89a61d08="" colspan="1"></td>
            <td data-v-89a61d08="" colspan="1">2024-10-01 13:05 UTC</td>
            <td data-v-89a61d08="" colspan="1">2024-10-01 13:06 UTC</td>
          </tr>
          <tr data-v-89a61d08="">
            <td data-v-89a61d08=""><a data-v-89a61d08="" href="http://jira-service:8002/browse/XXXX-0002" target="_blank">XXXX-0002 <i data-v-89a61d08="" class="bi-box-arrow-up-right"></i></a></td>
            <td data-v-89a61d08="" colspan="1" title="openshift-1">openshift-1</td>
            <td data-v-89a61d08="" colspan="1"></td>
            <td data-v-89a61d08="" colspan="1" title="xxxx-0-002">xxxx-0-002</td>
            <td data-v-89a61d08="" colspan="1">CLOSED</td>
            <td data-v-89a61d08="" colspan="1"></td>
            <td data-v-89a61d08="" colspan="1">2024-11-01 13:05 UTC</td>
            <td data-v-89a61d08="" colspan="1">2024-11-01 13:06 UTC</td>
          </tr>
          <tr data-v-89a61d08="">
            <td data-v-89a61d08=""><a data-v-89a61d08="" href="http://jira-service:8002/browse/XXXX-0001" target="_blank">XXXX-0001 <i data-v-89a61d08="" class="bi-box-arrow-up-right"></i></a></td>
            <td data-v-89a61d08="" colspan="1" title="openshift-1">openshift-1</td>
            <td data-v-89a61d08="" colspan="1"></td>
            <td data-v-89a61d08="" colspan="1" title="xxxx-0-001">xxxx-0-001</td>
            <td data-v-89a61d08="" colspan="1">NEW</td>
            <td data-v-89a61d08="" colspan="1"></td>
            <td data-v-89a61d08="" colspan="1">2024-12-01 13:05 UTC</td>
            <td data-v-89a61d08="" colspan="1">2024-12-01 13:06 UTC</td>
          </tr>
        </tbody>
      </table>
      <!--v-if-->
      <!--v-if-->
    </div>
  </div>
</div>"
`;

exports[`flawTrackers > Displays embedded trackers manager 1`] = `
"<div data-v-89a61d08="">
  <div data-v-89a61d08="" class="affects-trackers">
    <div data-v-89a61d08="" class="bg-dark rounded-top-2 text-info">
      <div data-v-89a61d08="" class="affect-trackers-heading d-flex p-1 pt-2 px-3">
        <h5 data-v-89a61d08="" class="m-0">Trackers</h5>
      </div>
      <!--v-if--><input data-v-89a61d08="" type="text" class="form-control border border-info focus-ring m-2 mb-1 p-1" style="width: 35ch;" placeholder="Filter Modules/Components...">
      <div data-v-89a61d08="" class="trackers-toolbar p-2 pt-1">
        <div data-v-89a61d08="" class="tracker-badges">
          <div data-v-89a61d08="" class="per-page-btn btn btn-sm badge"><i data-v-89a61d08="" style="pointer-events: auto;" class="bi bi-dash-square fs-6 my-auto" title="Reduce trackers per page"></i><span data-v-89a61d08="" class="mx-2 my-auto">Per page:</span><input data-v-89a61d08="" type="text" class="form-control mx-2" value="10"><i data-v-89a61d08="" style="pointer-events: auto;" class="bi bi-plus-square fs-6 my-auto" title="Increase trackers per page"></i></div>
          <!--v-if-->
        </div><button data-v-89a61d08="" type="button" class="btn btn-sm btn-info ms-auto"><i data-v-89a61d08="" class="bi bi-binoculars"></i> Show Trackers Manager </button>
      </div>
    </div>
    <div data-v-89a61d08="" class="osim-tracker-card pb-2 pt-0 pe-2 ps-2 bg-dark">
      <table data-v-89a61d08="" class="trackers-table table table-striped table-info mb-0">
        <thead data-v-89a61d08="">
          <tr data-v-89a61d08="">
            <th data-v-89a61d08="">Bug ID</th>
            <th data-v-89a61d08="">Module</th>
            <th data-v-89a61d08="">Component</th>
            <th data-v-89a61d08="">Product Stream</th>
            <th data-v-89a61d08=""><span data-v-89a61d08="" class="align-bottom me-1">Status</span><button data-v-89a61d08="" id="status-filter" type="button" class="btn btn-sm border-0 p-0" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="false"><i data-v-89a61d08="" class="bi bi-funnel" title=""></i></button>
              <ul data-v-89a61d08="" class="dropdown-menu" aria-labelledby="status-filter">
                <li data-v-89a61d08=""><a data-v-89a61d08="" href="#" class="btn py-0 dropdown-item"><input data-v-89a61d08="" type="checkbox" class="form-check-input me-2"><span data-v-89a61d08="">NEW</span></a></li>
                <li data-v-89a61d08=""><a data-v-89a61d08="" href="#" class="btn py-0 dropdown-item"><input data-v-89a61d08="" type="checkbox" class="form-check-input me-2"><span data-v-89a61d08="">CLOSED</span></a></li>
              </ul>
            </th>
            <th data-v-89a61d08="">Resolution</th>
            <th data-v-89a61d08=""> Created date <i data-v-89a61d08="" class="bi-caret-up-fill bi"></i></th>
            <th data-v-89a61d08=""> Updated date <i data-v-89a61d08="" class="opacity-0 bi-caret-up-fill bi"></i></th>
          </tr>
        </thead>
        <tbody data-v-89a61d08="">
          <tr data-v-89a61d08="">
            <td data-v-89a61d08=""><a data-v-89a61d08="" href="http://jira-service:8002/browse/XXXX-0006" target="_blank">XXXX-0006 <i data-v-89a61d08="" class="bi-box-arrow-up-right"></i></a></td>
            <td data-v-89a61d08="" colspan="1" title="openshift-5">openshift-5</td>
            <td data-v-89a61d08="" colspan="1"></td>
            <td data-v-89a61d08="" colspan="1" title="xxxx-0-006">xxxx-0-006</td>
            <td data-v-89a61d08="" colspan="1">CLOSED</td>
            <td data-v-89a61d08="" colspan="1"></td>
            <td data-v-89a61d08="" colspan="1">2024-07-01 13:05 UTC</td>
            <td data-v-89a61d08="" colspan="1">2024-07-01 13:06 UTC</td>
          </tr>
          <tr data-v-89a61d08="">
            <td data-v-89a61d08=""><a data-v-89a61d08="" href="http://jira-service:8002/browse/XXXX-0005" target="_blank">XXXX-0005 <i data-v-89a61d08="" class="bi-box-arrow-up-right"></i></a></td>
            <td data-v-89a61d08="" colspan="1" title="openshift-5">openshift-5</td>
            <td data-v-89a61d08="" colspan="1"></td>
            <td data-v-89a61d08="" colspan="1" title="xxxx-0-005">xxxx-0-005</td>
            <td data-v-89a61d08="" colspan="1">NEW</td>
            <td data-v-89a61d08="" colspan="1"></td>
            <td data-v-89a61d08="" colspan="1">2024-08-01 13:05 UTC</td>
            <td data-v-89a61d08="" colspan="1">2024-08-01 13:06 UTC</td>
          </tr>
          <tr data-v-89a61d08="">
            <td data-v-89a61d08=""><a data-v-89a61d08="" href="http://jira-service:8002/browse/XXXX-0004" target="_blank">XXXX-0004 <i data-v-89a61d08="" class="bi-box-arrow-up-right"></i></a></td>
            <td data-v-89a61d08="" colspan="1" title="openshift-1">openshift-1</td>
            <td data-v-89a61d08="" colspan="1"></td>
            <td data-v-89a61d08="" colspan="1" title="xxxx-0-004">xxxx-0-004</td>
            <td data-v-89a61d08="" colspan="1">CLOSED</td>
            <td data-v-89a61d08="" colspan="1"></td>
            <td data-v-89a61d08="" colspan="1">2024-09-01 13:05 UTC</td>
            <td data-v-89a61d08="" colspan="1">2024-09-01 13:06 UTC</td>
          </tr>
          <tr data-v-89a61d08="">
            <td data-v-89a61d08=""><a data-v-89a61d08="" href="http://jira-service:8002/browse/XXXX-0003" target="_blank">XXXX-0003 <i data-v-89a61d08="" class="bi-box-arrow-up-right"></i></a></td>
            <td data-v-89a61d08="" colspan="1" title="openshift-1">openshift-1</td>
            <td data-v-89a61d08="" colspan="1"></td>
            <td data-v-89a61d08="" colspan="1" title="xxxx-0-003">xxxx-0-003</td>
            <td data-v-89a61d08="" colspan="1">NEW</td>
            <td data-v-89a61d08="" colspan="1"></td>
            <td data-v-89a61d08="" colspan="1">2024-10-01 13:05 UTC</td>
            <td data-v-89a61d08="" colspan="1">2024-10-01 13:06 UTC</td>
          </tr>
          <tr data-v-89a61d08="">
            <td data-v-89a61d08=""><a data-v-89a61d08="" href="http://jira-service:8002/browse/XXXX-0002" target="_blank">XXXX-0002 <i data-v-89a61d08="" class="bi-box-arrow-up-right"></i></a></td>
            <td data-v-89a61d08="" colspan="1" title="openshift-1">openshift-1</td>
            <td data-v-89a61d08="" colspan="1"></td>
            <td data-v-89a61d08="" colspan="1" title="xxxx-0-002">xxxx-0-002</td>
            <td data-v-89a61d08="" colspan="1">CLOSED</td>
            <td data-v-89a61d08="" colspan="1"></td>
            <td data-v-89a61d08="" colspan="1">2024-11-01 13:05 UTC</td>
            <td data-v-89a61d08="" colspan="1">2024-11-01 13:06 UTC</td>
          </tr>
          <tr data-v-89a61d08="">
            <td data-v-89a61d08=""><a data-v-89a61d08="" href="http://jira-service:8002/browse/XXXX-0001" target="_blank">XXXX-0001 <i data-v-89a61d08="" class="bi-box-arrow-up-right"></i></a></td>
            <td data-v-89a61d08="" colspan="1" title="openshift-1">openshift-1</td>
            <td data-v-89a61d08="" colspan="1"></td>
            <td data-v-89a61d08="" colspan="1" title="xxxx-0-001">xxxx-0-001</td>
            <td data-v-89a61d08="" colspan="1">NEW</td>
            <td data-v-89a61d08="" colspan="1"></td>
            <td data-v-89a61d08="" colspan="1">2024-12-01 13:05 UTC</td>
            <td data-v-89a61d08="" colspan="1">2024-12-01 13:06 UTC</td>
          </tr>
        </tbody>
      </table>
      <!--v-if-->
      <!--v-if-->
    </div>
  </div>
</div>"
`;
